// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display singular for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $30.00
  </h1>
</div>
`;

exports[`should display singular for one expense 2`] = `
<div>
  <h1>
    Viewing 
    14
     
    expenses
     totalling 
    $357,480.00
  </h1>
</div>
`;
